--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,12 @@
 			<version>4.1.0.RELEASE</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+			<version>4.1.0.RELEASE</version>
+		</dependency>
+		
 	</dependencies>
 	<build>
 		<finalName>Sunglasses</finalName>
